[package]
name = "uniswap-storage"
version = "0.1.0"
edition = "2024"

[dependencies]

alloy-primitives = { version = "1.3.0", default-features = false }
alloy-provider = { version = "1.0.35", default-features = false }
alloy-sol-types = { version = "1.0.35", default-features = false }
alloy-eips = { version = "1.0.35", default-features = false }
alloy-network = { version = "1.0.35", default-features = false }


revm-database = { version = "7.0.1", default-features = false, optional = true, features = [
    "alloydb",
] }
reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.8.1", tag = "v1.8.1", optional = true }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", version = "1.8.1", tag = "v1.8.1", optional = true }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", version = "1.8.1", tag = "v1.8.1", optional = true }

futures = "0.3"
serde = { version = "1", features = ["derive"] }
auto_impl = "1.3"
eyre = "0.6.12"
itertools = "0.14"
async-trait = "0"

[dev-dependencies]
alloy-provider = { version = "1.0.35", default-features = false, features = [
    "pubsub",
    "ws",
] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"

[features]
default = ["full", "revm", "local-reth"]
full = ["v4", "v3", "angstrom"]
v4 = []
v3 = []
angstrom = []

revm = ["dep:revm-database"]
local-reth = [
    "dep:revm-database",
    "dep:reth-provider",
    "dep:reth-rpc",
    "dep:reth-rpc-convert",
]
